--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav ul li a:hover {
     font-family: 'Pirata One', system-ui; /* Menggunakan Pirata One */
     font-size: clamp(50px, 12vw, 150px);  /* Ukuran fleksibel */
     letter-spacing: 2px;                 /* Jarak huruf kecil saja agar terbaca */
-    color: #fff;
+    color: #B22222;
     text-transform: none;                /* Menampilkan huruf besar-kecil asli */
     font-weight: 400;                    /* Berat standar Pirata One */
     margin-right: 0;
