--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav {
 }
 
 .logo {
-    font-family: 'Pirata One', system-ui;
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 24px;
     letter-spacing: 2px;
